# wagers-dev

./: .env  .env-non-dev  .env-render  .gitignore  Dockerfile  README.md  alembic.ini  amvera.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  render.yaml  requirements.txt  scaner-config.json  test.py
data/: proxies.txt
migrations/: env.py
migrations/versions/: 00ed2a2acacc_archive_tables.py  18bea209d5ff_add_moneyline_to_bettypeenum.py  1f8e329f543d_match_result_uq.py  23c4f2cc31d7_update_user_model.py  270511669ddf_remove_bet_change_table.py  2ab971cd3294_add_indexes.py  2d1454eacd3d_add_user_password_field.py  2e31ae7d9dbf_match_result_description.py  4bbf805a1b1e_bet_type_remove_enum.py  54e4f51abfc2_user_session_id.py  56d98ba845b5_user_table_remove_id_field.py  616867e78327_bet_max_limit_default_value.py  675adf8ec08c_add_cascade_delete.py  79daa0cfc8b5_user_created_at.py  89c343baf15c_bet_desc_index.py  8ae4942f68b3_invite_code_is_used.py  a346ef47540f_bet_draw_cf.py  a7e862fd54ad_create_database.py  b6c25e460066_user_telegram_id.py  ba03bc334cef_add_match_result_model.py  c6bc4282d563_archives_foreign_keys.py  d7b33ec194ad_created_at_match.py  e039af18e7cb_match_result_cascade_delete.py  e8895e7c6481_bet_key.py  e8a27cfd106b_invite_code_email_null.py  ed019910fece_point_nullable.py  ef61e6580d14_double_unique_constraint_to_table_league.py  ef6e3d889bb8_team_table_add.py  f175fa9536e8_invite_code.py  f65c039f2f07_parent_id.py  fcd67ad87501_add_user_model.py
src/: downloader.py  logs.py  main.py  parser.py  proxy.py  settings.py  setup.py  straight.py
src/analyzer/: analyzer.py  promt.py
src/api/: __init__.py  (+8 more)
tests/: test_get_headers.py  test_proxy_manager.py
(+163 files in other folders)
