[tool.poetry]
name = "wagers-dev"
version = "0.1.0"
description = ""
authors = ["Loopeq <arsen.00z11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
webshareproxy = "^0.0.10"
pydantic-settings = "^2.4.0"
pytest = "^8.3.2"
fake-useragent = "^1.5.1"
aiohttp = "^3.10.5"
aiocache = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
